--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint --quiet app/ --ext .js"
   },
   "author": "Marusya Ganza",
   "license": "ISC",
@@ -18,11 +19,13 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.8.2",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.20.3",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4",
-    "css-loader": "^0.28.11",
-    "style-loader": "^0.20.3"
+    "webpack-dev-server": "^3.1.4"
   }
 }
