--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,7 @@
 
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/no-static-element-interactions": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/label-has-for": 1
   },
   "env": {
