--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "author": "Marusya Ganza",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^8.5.2",
+    "cssnano": "^3.10.0",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "stylelint": "^9.2.1"
   },
   "devDependencies": {
+    "autoprefixer": "^8.5.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^23.0.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -30,10 +35,10 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
-    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
     "react-addons-test-utils": "^15.6.2",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
