--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "Boilerplate for creating any projects on React",
   "main": "index.js",
+  "jest": {
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss)$":  "babel-jest"
+    },
+    "verbose": true
+  },
   "scripts": {
-    "start": "npm run lint && webpack-dev-server --mode development --open --hot",
+    "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "lint": "eslint .",
     "test": "jest"
