--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "jest": {
     "moduleNameMapper": {
-      "^.+\\.(css|less|scss)$":  "babel-jest"
+      "^.+\\.(css|less|scss)$": "babel-jest"
     },
     "verbose": true
   },
@@ -22,6 +22,8 @@
     "cssnano": "^3.10.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "stylelint": "^9.2.1"
   },
   "devDependencies": {
