--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-# JetBrains software
-.idea/
-*.iml
-
-# Compile results
-dist/
-
-# npm
-node_modules/
-package-lock.json
-
-# Visual Studio Code
-.vscode
+node_modules
+.idea
+dist
