--- a/package.json
+++ b/package.json
@@ -1,58 +1,46 @@
 {
-  "name": "Up-and-running",
+  "name": "eloquent",
   "version": "1.0.0",
-  "description": "Boilerplate for creating any projects on React",
+  "description": "",
   "main": "index.js",
-  "jest": {
-    "moduleNameMapper": {
-      "^.+\\.(css|less|scss)$": "babel-jest"
-    },
-    "verbose": true
-  },
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
-    "lint": "eslint .",
-    "test": "jest"
+    "dev": "webpack-dev-server --config=config/webpack.dev.js",
+    "build": "webpack --config=config/webpack.prod.js --env.NODE_ENV=production",
+    "serv": "nodemon --inspect --watch src/server --watch config src/server/main.js",
+    "prod": "set NODE_ENV=production&&node src/server/main.js"
   },
-  "author": "Marusya Ganza",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^8.5.2",
-    "cssnano": "^3.10.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "stylelint": "^9.2.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^8.5.2",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^23.0.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
+    "babel-minify": "^0.5.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
+    "babel-plugin-async-to-promises": "^1.0.5",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
+    "brotli-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^1.0.1",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "express-static-gzip": "^1.1.3",
+    "extract-loader": "^3.0.0",
+    "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.5",
-    "react-addons-test-utils": "^15.6.2",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-md5-hash": "0.0.6"
+    "mini-css-extract-plugin": "^0.4.4",
+    "nodemon": "^1.18.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
