--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "brotli-webpack-plugin": "^1.0.0",
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^1.0.1",
@@ -36,6 +37,9 @@
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-hot-loader": "^4.3.12",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
